--- a/docs/_themes/sphinx_rtd_theme/theme.conf
+++ b/docs/_themes/sphinx_rtd_theme/theme.conf
@@ -7,12 +7,12 @@ pygments_style = default
 canonical_url =
 analytics_id =
 collapse_navigation = True
-sticky_navigation = True
+sticky_navigation = False
 navigation_depth = 4
 includehidden = True
-titles_only = 
-logo_only =
-display_version = True
-prev_next_buttons_location = bottom
+titles_only = False
+logo_only = True
+display_version = False
+prev_next_buttons_location = top
 style_external_links = False
 vcs_pageview_mode =
