--- a/docs/_themes/sphinx_rtd_theme/theme.conf
+++ b/docs/_themes/sphinx_rtd_theme/theme.conf
@@ -13,6 +13,6 @@ includehidden = True
 titles_only = False
 logo_only = True
 display_version = False
-prev_next_buttons_location = bottom
+prev_next_buttons_location = top
 style_external_links = False
 vcs_pageview_mode =
