--- a/docs/_themes/sphinx_rtd_theme/theme.conf
+++ b/docs/_themes/sphinx_rtd_theme/theme.conf
@@ -6,13 +6,13 @@ pygments_style = default
 [options]
 canonical_url =
 analytics_id =
-collapse_navigation = False
-sticky_navigation = False
+collapse_navigation = True
+sticky_navigation = True
 navigation_depth = 4
 includehidden = True
 titles_only = False
-logo_only = True
-display_version = False
-prev_next_buttons_location = top
+logo_only = False
+display_version = True
+prev_next_buttons_location = bottom
 style_external_links = False
 vcs_pageview_mode =
